--- a/business.html
+++ b/business.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Business</title>
-    <link rel="stylesheet" href="css/business.css">
+    <link rel="stylesheet" href="business.css">
     <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
@@ -31,7 +31,7 @@
         <div class="card">
             <div class="max-w-sm rouded overflow-hidden shadow-2xl bg-gray-100">
                 <div class="imgbx">
-                    <img src="images/corporate.jfif" alt=crparty">
+                    <img src="corporate.jfif" alt=crparty">
                 </div>
                 <div class="content2">
 
@@ -55,7 +55,7 @@
         <div class="card">
             <div class="max-w-sm rouded overflow-hidden shadow-2xl bg-gray-100">
                 <div class="imgbx">
-                    <img src="images/corporate.jfif" alt=crparty">
+                    <img src="corporate.jfif" alt=crparty">
                 </div>
                 <div class="content2">
 
