--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Services</title>
-    <link href="css/services.css" rel="stylesheet">
+    <link href="services.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@500&family=Mali:wght@500&family=Montserrat&family=Pacifico&family=Space+Mono:ital@1&display=swap" rel="stylesheet">
 </head>
 <body>
